fix navbar color on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -463,7 +463,7 @@ textarea {
 /* Media */
 @media screen and (max-width: 1280px) {
     .navbar {
-        background-color: skyblue;
+        background-color: #020c1b;
         transition: 0.75s ease;
     }
 
